--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
         }
     ],
     "require": {
-        "illuminate/support": "5.*",
-        "larangular/routing-controller": "^0.1.0",
-        "larangular/support": "^0.1.3",
-        "barryvdh/laravel-dompdf": "^0.8.3"
+        "php": ">=7.1",
+        "illuminate/support": "~5.8.0|^6.0|^7.0|^8.0",
+        "larangular/routing-controller": "^0.1.0|^0.2.0",
+        "larangular/support": "^0.1.0|^0.2.0",
+        "barryvdh/laravel-dompdf": "^0.8.7"
     },
     "autoload": {
         "psr-4": {
