--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
         }
     ],
     "require": {
-        "php": "^7.1|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0|^9.0",
+        "php": ">=7.1",
+        "illuminate/support": "*",
         "larangular/support": "^0.1.0|^0.2.0",
-        "barryvdh/laravel-dompdf": "^2.2.0"
+        "barryvdh/laravel-dompdf": "^2.2.0|^3.0"
     },
     "autoload": {
         "psr-4": {
